infra/k8s/redeem-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redeem-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redeem
  template:
    metadata:
      labels:
        app: redeem
    spec:
      containers:
        - name: redeem
          image: eslam1146/redeem
---
apiVersion: v1
kind: Service
metadata:
  name: redeem-serv
spec:
  selector:
    app: redeem
  ports:
    - name: redeem
      protocol: TCP
      port: 3000
      targetPort: 3000
