infra/k8s/redeem-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redeem-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redeem-mongo
  template:
    metadata:
      labels:
        app: redeem-mongo
    spec:
      containers:
        - name: redeem-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: redeem-mongo-srv
spec:
  selector:
    app: redeem-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
