infra/k8s/voucher-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voucher-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voucher
  template:
    metadata:
      labels:
        app: voucher
    spec:
      containers:
        - name: voucher
          image: eslam1146/voucher
---
apiVersion: v1
kind: Service
metadata:
  name: voucher-serv
spec:
  selector:
    app: voucher
  ports:
    - name: voucher
      protocol: TCP
      port: 3000
      targetPort: 3000
