infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: vouchers.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-serv
                port:
                  number: 3000
          # - path: /api/tickets/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ticket-srv
          #       port:
          #         number: 3000
          # - path: /api/orders/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: order-srv
          #       port:
          #         number: 3000
          # - path: /api/payments/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: payment-srv
          #       port:
          #         number: 3000
          # - path: /?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client-srv
          #       port:
          #         number: 3000
